Externalize BOM ingestion pipeline
Signed-off-by: nscuro <nscuro@protonmail.com>